# MVCApi.Services/PaginationHelpers.cs
@@ -1,0 +1,29 @@
+using System;
+using System.Linq;
+using System.Linq.Expressions;
+using System.Threading.Tasks;
+using Microsoft.EntityFrameworkCore;
+using MVCApi.Application;
+
+namespace MVCApi.Services
+{
+    public class PaginationHelpers<T>
+    {
+        public static async Task<PaginatedList<T>> CreateAsync(IQueryable<T> source, int pageIndex, int pageSize)
+        {
+            var count = await source.CountAsync();
+            var items = await source.Skip((pageIndex - 1) * pageSize).Take(pageSize).ToListAsync();
+            return new PaginatedList<T>(items, count, pageIndex, pageSize);
+        }
+
+        public static async Task<PaginatedList<T>> CreateAsync(IQueryable<T> source,
+                                                               int pageIndex,
+                                                               int pageSize,
+                                                               Expression<Func<T, bool>> expression)
+        {
+            var count = await source.CountAsync();
+            var items = await source.Where(expression).Skip((pageIndex - 1) * pageSize).Take(pageSize).ToListAsync();
+            return new PaginatedList<T>(items, count, pageIndex, pageSize);
+        }
+    }
+}
